--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -1,10 +1,10 @@
 @import "color.css";
 @import "header.css";
-@import "common_body.css";
+@import "general_css.css";
 @import "footer.css";
 article {
     margin: 0;
-    background-color: var(--background_color_two);
+    background-color: var(--bg-color-black);
     font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -13,7 +13,7 @@ article {
     text-align: center;
     margin: 0 0 5.625rem 0;
     font-weight: 300;
-    color: var(--text_color_three);
+    color: #939FA4;
 }
 
 .time_id {
