--- a/css/general_css.css
+++ b/css/general_css.css
@@ -5,8 +5,8 @@ body {
 
 body {
     margin: 0;
-    background-color: var(--background_color_two);
-    font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: var(--bg-color-black);
+    font-family: 'Roboto', 'Segoe UI', sans-serif;
 }
 
 a {
@@ -15,9 +15,9 @@ a {
 }
 
 a.button {
-    background: var(--background_color_two);
+    background: var(--bg-color-black);
     border-radius: 5px;
-    color: var(--background_color_one);
+    color: var(--bg-color-white);
     font-weight: 500;
     padding: 0 2rem;
     line-height: 2.75rem;
@@ -35,7 +35,7 @@ a.button_two {
     box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     background: var(--highlight_color);
-    color: var(--background_color_one);
+    color: var(--bg-color-white);
     font-weight: 500;
     font-size: 0.875rem;
     padding: 0.625rem;
@@ -45,7 +45,7 @@ a.button_two {
 
 .Body-wrapper {
     width: 100%;
-    background-color: var(--background_color_one);
+    background-color: var(--bg-color-white);
     min-height: 10rem;
     border-left: 1px solid var(--border_color);
     border-right: 1px solid var(--border_color);
@@ -59,7 +59,7 @@ a.button_two {
     height: inherit;
 }
 
-.inner_padding {
+.pad {
     padding: 5.875rem 0;
 }
 
@@ -68,7 +68,7 @@ a.button_two {
     text-align: center;
     margin: 0 0 5.625rem 0;
     font-weight: 300;
-    color: var(--text_color_three);
+    color: #939FA4;
 }
 
 .h1_strong {
@@ -77,7 +77,7 @@ a.button_two {
 }
 
 .subheadline {
-    color: var(--background_color_one);
+    color: var(--bg-color-white);
     font-size: 1.25rem;
     margin-bottom: 3.75rem;
 }
