--- a/css/index.css
+++ b/css/index.css
@@ -1,40 +1,36 @@
+@import "general_css.css";
 @import "color.css";
-@import "header.css";
-@import "common_body.css";
 @import "footer.css";
+@import "headerstyles.css";
 .blog {
     text-align: center;
 }
 
-.blog_posts {
+.post_content {
     display: grid;
     grid-template-columns: 1fr;
 }
 
-.blog_posts>div {
+.post_content>div {
     min-width: 20rem;
     margin-top: 1.25rem;
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
 
-.blog_posts_img {
+.post_img {
     width: 100%;
     display: block;
     margin: -1.25rem auto 0 auto;
 }
 
-.blog_post_span {
-    font-size: 1rem;
-}
-
-.blog_post_teaser {
+.post_text {
     margin: 2.5rem;
     text-align: left;
 }
 
 
-.blog_post_h1 {
+.post_text_h1 {
     font-size: 1.25rem;
     font-weight: 700;
     margin-top: 1.875rem;
@@ -55,14 +51,9 @@
 .c_green {
     color: #057e3cba;
 }
-.blog_post_p {
-    color: var(--text_color_four);
+.post_text_p {
+    color: rgb(61, 61, 61);
     text-align: justify;
-}
-
-.blog_posts_a {
-    color: var(--text_color_five);
-    font-weight: 500;
 }
 
 .blog .button {
@@ -71,7 +62,7 @@
 }
 
 @media(min-width:1125px) {
-    .blog_posts {
+    .post_content {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-column-gap: 0.625rem;
